package com.example.personal_budget.service;

import org.springframework.stereotype.Service;

@Service
public class DashboardService {

}
